[package]
authors = ["Josh Holmer <jholmer.in@gmail.com>"]
description = "An entropy-based password strength estimator, originally for Javascript by Dropbox."
documentation = "https://docs.rs/zxcvbn"
homepage = "https://github.com/shssoichiro/zxcvbn-rs"
license = "MIT"
name = "zxcvbn"
repository = "https://github.com/shssoichiro/zxcvbn-rs"
version = "3.1.1"
edition = "2021"
rust-version = "1.66"

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
derive_builder = { version = "0.20", optional = true }
fancy-regex = "0.18"
itertools = "0.14"
lazy_static = "1.3"
regex = "1"
time = { version = "0.3" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
chrono = "0.4.38"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Performance"] }

[dependencies.serde]
optional = true
version = "1"
features = ["derive"]

[dev-dependencies]
quickcheck = "1.0.0"
serde_json = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = "0.8"
serde_json = "1"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
criterion = { version = "0.8", default-features = false }
getrandom = { version = "0.4", features = ["wasm_js"] }
wasm-bindgen-test = "0.3"

[features]
default = ["builder"]
ser = ["serde"]
builder = ["derive_builder"]
custom_wasm_env = []

[profile.test]
opt-level = 2

[[bench]]
name = "zxcvbn"
harness = false

[[bench]]
name = "zxcvbn_unicode"
harness = false
